Fixing the nav menu button on mobile

--- a/sass/03-components/_02-navigation.scss
+++ b/sass/03-components/_02-navigation.scss
@@ -304,12 +304,11 @@
 	font-size: 0;
 	padding: .25rem .5rem;
 	background-color: $color__white !important;
-	border: none !important;
 	margin: 0;
 	z-index: 20;
 	@extend %transition;
 	@include tablet-portrait{
-		border: .125rem solid $color__tertiary !important;
+		
 	}
 	@include tablet{
 		display: none;
@@ -333,7 +332,7 @@
 			right: 0;
 		}
 		.menu-toggle{
-			
+			border: none;
 			&:before{
 				content: "\f335";
 				font-family: 'dashicons';
